{
  "version": 4,
  "terraform_version": "0.12.4",
  "serial": 347,
  "lineage": "de132966-24e3-8b43-3aa7-a9a62e4d7471",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "elastic-ip-for-nat-gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "associate_with_private_ip": "10.0.0.5",
            "domain": "vpc",
            "id": "eipalloc-0204a5a0b5037f4f2",
            "public_dns": "ec2-3-134-74-72.us-east-2.compute.amazonaws.com",
            "public_ip": "3.134.74.72",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "Development-EIP"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "jenkins-instance",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00bf61217e296b409",
            "arn": "arn:aws:ec2:us-east-2:202624756631:instance/i-082e995f63efb1493",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-082e995f63efb1493",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "eksworkshop",
            "monitoring": false,
            "primary_network_interface_id": "eni-08534411a25089d78",
            "private_dns": "ip-10-0-1-220.us-east-2.compute.internal",
            "private_ip": "10.0.1.220",
            "public_dns": "ec2-3-133-156-199.us-east-2.compute.amazonaws.com",
            "public_ip": "3.133.156.199",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "iops": 100,
                "volume_id": "vol-0e0653e743343c3c8",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06c8860e0bafab0fd",
            "tags": {
              "Name": "Jenkins-Instance"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0245e057a77a9f7c1"
            ]
          },
          "depends_on": [
            "aws_security_group.sg_allow_ssh_jenkins",
            "aws_subnet.public-subnet-1",
            "data.aws_ami.amazon-linux-2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "development-igw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0e5ee535a621e549d",
            "owner_id": "202624756631",
            "tags": {
              "Name": "Development-IGW"
            },
            "vpc_id": "vpc-0fe5abb249d07235c"
          },
          "depends_on": [
            "aws_vpc.development-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat-gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0204a5a0b5037f4f2",
            "id": "nat-0527279abc1716272",
            "network_interface_id": "eni-044a3f60a3cc4e881",
            "private_ip": "10.0.1.125",
            "public_ip": "3.134.74.72",
            "subnet_id": "subnet-06c8860e0bafab0fd",
            "tags": {
              "Name": "Development-NATGW"
            }
          },
          "depends_on": [
            "aws_eip.elastic-ip-for-nat-gw",
            "aws_subnet.public-subnet-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "nat-gw-route",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-091eab56c24fee8881080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "nat-0527279abc1716272",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-091eab56c24fee888",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "depends_on": [
            "aws_nat_gateway.nat-gw",
            "aws_route_table.private-route-table"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public-internet-igw-route",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0e5ee535a621e549d",
            "id": "r-rtb-0006206dd2ef24a031080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0006206dd2ef24a03",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "depends_on": [
            "aws_internet_gateway.development-igw",
            "aws_route_table.public-route-table"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-route-table",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-091eab56c24fee888",
            "owner_id": "202624756631",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Development-Private-RouteTable"
            },
            "vpc_id": "vpc-0fe5abb249d07235c"
          },
          "depends_on": [
            "aws_vpc.development-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-route-table",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0006206dd2ef24a03",
            "owner_id": "202624756631",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Development-Public-RouteTable"
            },
            "vpc_id": "vpc-0fe5abb249d07235c"
          },
          "depends_on": [
            "aws_vpc.development-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-route-1-association",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09938e4aca03e7161",
            "route_table_id": "rtb-091eab56c24fee888",
            "subnet_id": "subnet-05ea8efd713ff4e33"
          },
          "depends_on": [
            "aws_route_table.private-route-table",
            "aws_subnet.private-subnet-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-route-2-association",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-047e245207686bc71",
            "route_table_id": "rtb-091eab56c24fee888",
            "subnet_id": "subnet-080bdef8359e8a173"
          },
          "depends_on": [
            "aws_route_table.private-route-table",
            "aws_subnet.private-subnet-2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-route-3-association",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-030ed9d244c398d59",
            "route_table_id": "rtb-091eab56c24fee888",
            "subnet_id": "subnet-088926ad6d84b6d67"
          },
          "depends_on": [
            "aws_route_table.private-route-table",
            "aws_subnet.private-subnet-3"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-route-1-association",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c1004819bfb17766",
            "route_table_id": "rtb-0006206dd2ef24a03",
            "subnet_id": "subnet-06c8860e0bafab0fd"
          },
          "depends_on": [
            "aws_route_table.public-route-table",
            "aws_subnet.public-subnet-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-route-2-association",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-073852030e174a9e9",
            "route_table_id": "rtb-0006206dd2ef24a03",
            "subnet_id": "subnet-0192a1d5508e64786"
          },
          "depends_on": [
            "aws_route_table.public-route-table",
            "aws_subnet.public-subnet-2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-route-3-association",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-017d70a2ac3b8901d",
            "route_table_id": "rtb-0006206dd2ef24a03",
            "subnet_id": "subnet-05d58c1620a14497f"
          },
          "depends_on": [
            "aws_route_table.public-route-table",
            "aws_subnet.public-subnet-3"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_allow_ssh_jenkins",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:202624756631:security-group/sg-0245e057a77a9f7c1",
            "description": "Allow SSH and Jenkins inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0245e057a77a9f7c1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "allow_ssh_jenkins",
            "name_prefix": null,
            "owner_id": "202624756631",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-0fe5abb249d07235c"
          },
          "depends_on": [
            "aws_vpc.development-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet-1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:202624756631:subnet/subnet-05ea8efd713ff4e33",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.10.0/24",
            "id": "subnet-05ea8efd713ff4e33",
            "map_public_ip_on_launch": false,
            "owner_id": "202624756631",
            "tags": {
              "Name": "Development-Private-Subnet-1"
            },
            "vpc_id": "vpc-0fe5abb249d07235c"
          },
          "depends_on": [
            "aws_vpc.development-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet-2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:202624756631:subnet/subnet-080bdef8359e8a173",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.11.0/24",
            "id": "subnet-080bdef8359e8a173",
            "map_public_ip_on_launch": false,
            "owner_id": "202624756631",
            "tags": {
              "Name": "Development-Private-Subnet-2"
            },
            "vpc_id": "vpc-0fe5abb249d07235c"
          },
          "depends_on": [
            "aws_vpc.development-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet-3",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:202624756631:subnet/subnet-088926ad6d84b6d67",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.0.12.0/24",
            "id": "subnet-088926ad6d84b6d67",
            "map_public_ip_on_launch": false,
            "owner_id": "202624756631",
            "tags": {
              "Name": "Development-Private-Subnet-3"
            },
            "vpc_id": "vpc-0fe5abb249d07235c"
          },
          "depends_on": [
            "aws_vpc.development-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet-1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:202624756631:subnet/subnet-06c8860e0bafab0fd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-06c8860e0bafab0fd",
            "map_public_ip_on_launch": false,
            "owner_id": "202624756631",
            "tags": {
              "Name": "Development-Public-Subnet-1"
            },
            "vpc_id": "vpc-0fe5abb249d07235c"
          },
          "depends_on": [
            "aws_vpc.development-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet-2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:202624756631:subnet/subnet-0192a1d5508e64786",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0192a1d5508e64786",
            "map_public_ip_on_launch": false,
            "owner_id": "202624756631",
            "tags": {
              "Name": "Development-Public-Subnet-2"
            },
            "vpc_id": "vpc-0fe5abb249d07235c"
          },
          "depends_on": [
            "aws_vpc.development-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet-3",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:202624756631:subnet/subnet-05d58c1620a14497f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-05d58c1620a14497f",
            "map_public_ip_on_launch": false,
            "owner_id": "202624756631",
            "tags": {
              "Name": "Development-Public-Subnet-3"
            },
            "vpc_id": "vpc-0fe5abb249d07235c"
          },
          "depends_on": [
            "aws_vpc.development-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "development-vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:202624756631:vpc/vpc-0fe5abb249d07235c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-05a2650aa4f003e88",
            "default_route_table_id": "rtb-002cc071327983e38",
            "default_security_group_id": "sg-0af4dc906ac924daf",
            "dhcp_options_id": "dopt-a06597cb",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0fe5abb249d07235c",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-002cc071327983e38",
            "owner_id": "202624756631",
            "tags": {
              "Name": "Development-VPC"
            }
          }
        }
      ]
    }
  ]
}